--- a/ui/package.json
+++ b/ui/package.json
@@ -13,9 +13,12 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "autoprefixer": "^10.4.14",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
